--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <h1>Prueba 1</h1>
+    <header>
+        <nav>
+            <div>
+                <h2>José</h2>
+            </div>
+            <div>
+                <ul>
+                    <li>Inicio</li>
+                    <li>Acerca de mí</li>
+                    <li>Habilidades</li>
+                    <li>Portafolio</li>
+                    <li>Contacto</li>
+                </ul>
+            </div>
+            <div></div>
+            <div></div>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
