--- a/index.html
+++ b/index.html
@@ -20,15 +20,55 @@
                     <li>Contacto</li>
                 </ul>
             </div>
-            <div></div>
-            <div></div>
+            <div>
+                <input type="checkbox" id="toggle" class="offscreen">
+                <label for="toggle" class="switch"></label>
+            </div>
+            <div>
+                <input type="checkbox" id="toggle" class="offscreen">
+                <label for="toggle" class="switch"></label>
+            </div>
         </nav>
     </header>
     <main>
+        <section class="hero">
+            <h1>Hola, soy José</h1>
+            <p>Soy desarrollador web, apasionado por la tecnología y la programación</p>
 
+            <i>linkedin</i>
+            <i>whatsapp</i>
+            <i>github</i>
+            <i>email</i>
+
+            <button>Descargar CV</button>
+
+        </section>
+        <section class="about-me">
+        
+            <h2>Acerca de mí</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit animi totam, quaerat qui recusandae error ex dolor fuga sed, cum magni perspiciatis corrupti omnis voluptate cumque laborum vero aut libero!</p>
+
+            <article class="cards">foto</article>
+            <article class="cards">foto</article>
+            <article class="cards">foto</article>
+        </section>
+
+        <section class="hability">
+
+        </section>
+        <section class="proyects">
+
+        </section>
+        <section class="contact">
+
+        </section>
     </main>
     <footer>
-
+        <section class="me">
+            <article class="me me__personal"></article>
+            <article class="me me__social-networks"></article>
+        </section>
+        <section class="copyrigth"></section>
     </footer>
 </body>
 </html>
