--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -343,8 +343,7 @@
               <i class='bx bxl-whatsapp'></i>
 
               <span class="contact__info-number">
-                <a href="https://wa.me/+584246299955?text=Hola!%20José%20estoy%20interesado%20en%20tu%20perfil%20" target="_blank">Enviar mensaje a
-                  WhatsApp</a>
+                <a href="https://wa.me/+584246299955?text=Hola!%20José%20estoy%20interesado%20en%20tu%20perfil%20" target="_blank">Send a message to WhatsApp</a>
               </span>
             </div>
 
